# online-food-ordering-microservice

./: .gitignore  README.md  docker-compose.yml  test_suite.py  traefik.yml
services/catalog_service/: .env  Cargo.toml  Dockerfile
services/catalog_service/.sqlx/: query-1855ebbe4d73f789852be224cac7875e2032f0366ad1f8fd1e0a628f7542960a.json  query-1868b0b778829efa107a3d56e9c0887ec4402d96c21ef50067c3ebcb6f9acd2a.json  query-21dfa33e16e8425c46180af0e26422e0ea8ac4f4330f316b9d4600dfda7a7ae2.json  query-2225699ec8a977bdfc18b6225e9d3596efbc23b7a5f31535aa021a1746f203fb.json  query-3ec50d748bb6a2abac1a6a128de97ebb9474db8209bc2f6bdea0a3e5f3f63f8c.json  query-55bd61f30bf2f7143db639533ea1e5c4cf839b7c3923c4ac90cae22841cf61a0.json  query-623ac02606260bf1e2e94e88051e278ddba1a3d785c68374fceb9d7b8871cfb5.json  query-9214416287bc7c105175ed1362b13f13e47a5ffc05277aa7ea094e5ed1263c79.json  query-cb919f7af4c966593fdf90e189d9f2f07337cda6acf9d653b7e355319f0c243a.json  query-e19463fae47e8f7ae88fd172a11c9ba2834e72037b5ac707f4fa3875510954a0.json
services/catalog_service/migrations/: 20260406181134_create_restaurants.sql  20260406181140_create_menu_items.sql  20260407195943_add_cascade_delete_to_menu_items.sql
services/catalog_service/src/: app_state.rs  errors.rs  main.rs  models.rs  router.rs
services/catalog_service/src/dto/: menu_item.rs  mod.rs  restaurant.rs
services/catalog_service/src/handlers/: menu_items.rs  mod.rs  restaurants.rs
services/catalog_service/src/repository/: catalog_repo_trait.rs  mod.rs
services/catalog_service/src/repository/impls/: postgres.rs
(+40 files in other folders)
